# ShockVR

./: README.md  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  android_main.cpp  shockvr.cpp
app/src/main/cpp/Game/: ai.c  airupt.c  amap.c  amaploop.c  ammomfd.c  audiolog.c  automap.c  bark.c  biohelp.c  blitlargealign.s  cardmfd.c  citres.c  clearcache.s  combat.c  cone.c  criterr.c  cyber.c  cybermfd.c  cybmem.c  cybrnd.c  damage.c  digifx.c  drugs.c  effect.c  email.c  faceobj.c  fixtrmfd.c  frcamera.c  frclip.c  frcompil.c  frmain.c  frobj.c  froslew.c  frpipe.c  frpts.c  frsetup.c  frtables.c  frterr.c  frutil.c  frutils.c  (+74 more)
app/src/main/cpp/Game/Headers/: ai.h  aiflags.h  amap.h  amaploop.h  audiolog.h  automap.h  bark.h  cachetex.h  cit2d.h  citalog.h  citbark.h  citmat.h  citres.h  colors.h  combat.h  cone.h  criterr.h  cyber.h  cybmem.h  cybrloop.h  cybrnd.h  cybstrng.h  damage.h  diffq.h  dirac.h  doorparm.h  drugs.h  dynmem.h  editloop.h  effect.h  emailbit.h  faketime.h  fauxrint.h  fr3d.h  frcamera.h  fredge.h  frflags.h  frintern.h  froslew.h  frparams.h  (+124 more)
app/src/main/cpp/Libraries/: CMakeLists.txt
app/src/main/cpp/Libraries/2D/: 2d.h  2ddiv.h  2dtest.c  bit.c  bit.h  bitmap.c  bitmap.h  blend.c  blndat.h  blnfcn.h  buffer.c  buffer.h  canvas.c  canvas.h  chain.c  chain.h  chnfuncs.c  chnfuncs.h  chrsiz.c  chrwid.c  close.c  close.h  cnvtab.c  context.c  ctxmac.h  detect.c  detect.h  devtab.c  fcntab.c  fill.h  floorloop.s  icanvas.h  idevice.h  ifcn.h  init.c  init.h  initint.h  initmac2d.c  invtab.c  line.h  (+57 more)
app/src/main/cpp/Libraries/2D/Clip/: clip.h  clpclin.c  clpcon.h  clpf24.c  clpfcn.h  clplin.c  clplin2.c  clpltab.c  clpltab.h  clpltyp.h  clpmono.c  clpply.c  clppoly.c  clprect.c  clpslin.c
app/src/main/cpp/Libraries/2D/Flat8/: fl8bft.h  fl8bl.c  fl8bldbl.c  fl8cft.h  fl8chfl8.c  fl8clear.c  fl8clin.c  fl8clin.h  fl8cnv.c  fl8cop.c  fl8cply.c  fl8ctp.c  fl8dbl.c  fl8f.c  fl8fl8.c  fl8fl8c.c  fl8fl8m.c  fl8fltr2.c  fl8ft.c  fl8g24.c  fl8gfl8.c  fl8gpix.c  fl8hfl8.c  fl8hlin.c  fl8lf.c  fl8lin.c  fl8lin.h  fl8ll.c  fl8lnop.c  fl8lop.c  fl8lp.c  fl8ltp.c  fl8lw.c  fl8mono.c  fl8mscl.c  fl8nft.h  fl8nl.c  fl8ns.c  fl8ntrp2.c  fl8opl.c  (+27 more)
app/src/main/cpp/Libraries/2D/GR/: grbm.h  grcbm.h  grclhbm.h  grcply.h  grd.c  grd.h  grdbm.h  grdev.h  grgbm.h  grhbm.h  grilin.c  grlin.h  grmalloc.c  grmalloc.h  grnull.c  grp24.h  grpix.h  grply.h  grrect.h  grrend.h  grs.h  grstate.h  gruilin.c
app/src/main/cpp/Libraries/2D/RSD/: rsd.h  rsdcvt.c  rsdunpack.c  rsdunpck.h
app/src/main/cpp/Libraries/3D/: 3d.h  3dinterp.h  3dtest.c  alloc.c  bitmap.c  clip.c  detail.c  fauxrend.h  fov.c  globalv.c  globalv.h  instance.c  interp.c  light.c  matrix.c  points.c  polygon.c  slew.c  tmap.c  vector.c
app/src/main/cpp/Libraries/AFILE/: addsoundtomovie.c  afile.c  afile.h  amov.c  animconv.c  aqtm.c  circbuff.h  compose.c  compose.h  dumphex.c  movconv.c  movconvdiv.c  movie.h  movinfo.c  oldanimconv.c  palextract.c  qtconv.c  quikconv.c  quikdump.c  quiktime.c  quiktime.h  quikwrit.c  subtitles.c
app/src/main/cpp/Libraries/DSTRUCT/: array.c  array.h  hash.c  hash.h  llist.c  llist.h  lllist.c  pqueue.c  pqueue.h  rect.c  rect.h  slist.h
app/src/main/cpp/Libraries/EDMS/: collide.cc  edms.h  edms_chk.h  edms_int.h  edms_mod.h  edms_vt.h  externs.h  globals.cc  idof.h  interfac.cc  intrsect.cc  oldedms.h  phy_tool.cc  physhand.h  soliton.cc  ss_flet.h  terrain.cc
app/src/main/cpp/Libraries/EDMS/MODELS/: b.cc  bb.cc  bip_skel.cc  biped.cc  biped.h  bipface.cc  cr_biped.cc  d_f_2.cc  d_f_face.cc  d_frame.cc  d_frame.h  death.cc  death.h  ff_face.cc  ff_ftl.cc  ff_ftl.h  fodeath.cc  ftl.cc  ftl.h  ftlface.cc  marbface.cc  marble.cc  marble.h  old_ftl.cc  pelface.cc  pelgud.cc  pelvis.cc  pelvis.h  robot.cc  robot.h
app/src/main/cpp/Libraries/FIX/: atofix.c  div64  f_exp.c  fix.c  fix.h  fix24.c  fix_asm.asm  fix_pow.c  fix_sqrt.c  fixasm.s  fixmath.s  fixsprnt.c  maketables.c  otrigtab.h  trigtab.h
app/src/main/cpp/Libraries/FIXPP/: fixpp.cc  fixpp.cpp  fixpp.h
app/src/main/cpp/Libraries/H/: 2dres.h  base.h  error.h  keydefs.h  lg_types.h  types.inc
app/src/main/cpp/Libraries/INPUT/: kb.h  kbcook.c  kbcook.h  kbglob.h  kbmac.c  mouse.c  mouse.h  mousevel.h
app/src/main/cpp/Libraries/LG/: dbg.c  dbg.h  lg.h  lgsprntf.c  lgsprntf.h  memall.c  memall.h  stack.c  tmpalloc.c  tmpalloc.h
app/src/main/cpp/Libraries/PALETTE/: palette.c  palette.h
app/src/main/cpp/Libraries/RES/: lzw.c  lzw.h  refacc.c  res.c  res.h  res_.h  resacc.c  resbuild.c  resfile.c  resload.c  resmake.c  restypes.c  restypes.h
app/src/main/cpp/Libraries/RND/: rnd.c  rnd.h  rndasm.s
app/src/main/cpp/Libraries/SND/: dig_init.c  dig_ops.c  digi.h  lgsndx.h  master.c  mid_init.c  mid_ops.c  midi.h  snd_util.c
app/src/main/cpp/Libraries/UI/: barrykey.h  butarray.c  butarray.h  curdat.h  curdrw.c  cursors.c  cursors.h  curtyp.h  event.c  event.h  fakefont.h  gadgets.c  gadgets.h  hotkey.c  hotkey.h  menu.c  menu.h  monofont.c  monofont.h  plain.c  plain.h  pushbutt.c  pushbutt.h  qboxgadg.c  qboxgadg.h  realfont.c  region.c  region.h  resgadg.h  slab.c  slab.h  slider.c  slider.h  textgadg.c  textgadg.h  texttool.c  texttool.h  tng.c  tng.h  tngapp.h  (+22 more)
app/src/main/cpp/Libraries/VOX/: vox.h  vox2d.c  vox3d.c  voxinit.c
app/src/main/cpp/Mac/: aehandlers.c  aehandlers.h  credits.c  dialoghelpers.c  dialoghelpers.h  initmac.c  initmac.h  mactune.c  mactune.h  movieplay.c  movieplay.h  prefs.c  prefs.h  shock.c  shock.h  shockbitmap.c  shockbitmap.h  shockdialogs.c  shockdialogs.h  shockhelp.c  shockhelp.h  tests.c  tests.h
app/src/main/cpp/Quest/: filesystem.cpp  filesystem.h  framebuffer.cpp  framebuffer.h  openxr.cpp  shockvr.cpp  shockvr.h
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
